== Version 1.3.2 ==
* Fix namespace pollution.
* Fix spurious bar triggering on subreddit listings and some profile page links.
* Fix minor bug when canceling adding a site.
* Fix minor internal cleanup bug in the site dropdown.

== Version 1.3.1 ==
* Add error-checking to JSON parsing
* Fix bug where 0 votes would show up as "Unknown" in score tooltips.

== Version 1.3.0 ==
* Support for Firefox 3.1 beta 2.
* Support for jQuery-enabled reddit.com DOM.
* Optional automatic refresh interval for the info bar.
* Clicking the score in a reddit info bar manually refreshes it.
* New internal API version compatibility system.
* Fixed several bugs by using more robust info requests.
* Fixed the internal capitalization of the "persistmode" preference for consistency.