@@ -1,5 +1,6 @@
 == Version 1.3.2 ==
 * Fix namespace pollution.
+* Fix Ctrl-arrow cursor movement in submit bar textbox.
 * Fix spurious bar triggering on subreddit listings and some profile page links.
 * Fix minor bug when canceling adding a site.
 * Fix minor internal cleanup bug in the site dropdown.
